[workspace]
members = [
	"src/lib/rust",
	"scaffold",
	"scaffold/aoc-query",
	"src/2015/day01/rust",
	"src/2015/day02/rust",
	"src/2015/day03/rust",
	"src/2015/day04/rust",
	"src/2015/day05/rust",
	"src/2016/day01/rust",
	"src/2017/day01/rust",
	"src/2018/day01/rust",
]

[profile.bench]
lto = true

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3
