[workspace]
members = [
	"src/lib/rust",
	"scaffold",
	"scaffold/aoc-query",
	"src/2015/day01/rust",
	"src/2015/day02/rust",
	"src/2015/day03/rust",
	"src/2015/day04/rust",
	"src/2015/day05/rust",
	"src/2016/day01/rust",
	"src/2017/day01/rust",
	"src/2018/day01/rust",
	"src/2019/day01/rust",
	"src/2019/day02/rust",
	"src/2019/day03/rust",
	"src/2019/day04/rust",
	"src/2019/day05/rust",
	"src/2019/day06/rust",
	"src/2019/day07/rust",
	"src/2019/day08/rust",
	"src/2019/day09/rust",
	"src/2019/day10/rust",
	"src/2019/day11/rust",
	"src/2019/day12/rust",
	"src/2019/day13/rust",
	"src/2019/day14/rust",
	"src/2019/day15/rust",
	"src/2019/day16/rust",
	"src/2019/day17/rust",
	"src/2019/day18/rust",
]

[profile.bench]
lto = true

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3
