[package]
name = "htmd"
version = "0.0.1"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[dependencies]
clap = "*"
async-std = "*"
tokio = "0.2.0-alpha.6"
scraper = "*"
ego-tree = "*"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }

[dev-dependencies]
criterion = "*"
