[package]
name = "scaffold"
version = "0.0.1"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[dependencies]
clap = "2.33.0"
async-std = "0.99.11"
tokio = "0.2.0-alpha.6"
scraper = "0.11.0"
reqwest = "0.10.0-alpha.1"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
html2md = "0.2.9"

[dev-dependencies]
criterion = "0.3.0"
