[package]
name = "scaffold"
version = "0.1.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[dependencies]
clap = "2.33.0"
async-std = "1.0.1"
tokio = "0.2.0-alpha.6"
scraper = "0.11.0"
reqwest = { version = "0.10.0-alpha.1", features = ["cookies"] }
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
ego-tree = "*"


[dev-dependencies]
criterion = "0.3.0"
