[package]
name = "aoc_query"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[dependencies]
clap = "2.33.0"
async-std = "1.2.0"
tokio = "0.2.0-alpha.6"
scraper = "0.11.0 "
reqwest = { version = "0.10.0-alpha.2", features = ["cookies"] }
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
ego-tree = "0.6.2"
serde = "1.0.103"
serde_json = "1.0.44"
chrono = "0.4.10"

[dev-dependencies]
criterion = "0.3.0"
