[package]
name = "aoc_query"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[dependencies]
clap = "2.33.1"
async-std = "1.5.0"
tokio = { version = "0.2.21", features = ["full"] }
scraper = "0.12.0"
reqwest = { version = "0.10.4", features = ["cookies"] }
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
ego-tree = "0.6.2"
serde = "1.0.103"
serde_json = "1.0.44"
chrono = "0.4.10"

[dev-dependencies]
criterion = "0.3.0"
