[package]
name = "aoc_query"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[dependencies]
clap = "2.33.3"
async-std = "1.7.0"
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
reqwest = { version = "0.10.9", features = ["cookies"] }
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
ego-tree = "0.6.2"
serde = "1.0.117"
serde_json = "1.0.59"
chrono = "0.4.19"

[dev-dependencies]
criterion = "*"
