[workspace]
members = [
	"lib",
	"aoc-derive",
	"aoc-scaffold",
	"aoc-scaffold/aoc-query",
	"2015/01",
	"2015/02",
	"2015/03",
	"2015/04",
	"2015/05",
	"2016/01",
	"2017/01",
	"2018/01",
	"2019/01",
	"2019/02",
	"2019/03",
	"2019/04",
	"2019/05",
	"2019/06",
	"2019/07",
	"2019/08",
	"2019/09",
	"2019/10",
	"2019/11",
	"2019/12",
	"2019/13",
	"2019/14",
	"2019/15",
	"2019/16",
	"2019/17",
	"2019/18",
	"2019/19",
	"2019/20",
	"2019/21",
	"2019/22",
	"2019/23",
	"2019/24",
]

[profile.bench]
lto = true

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3
