[package]
name = "aoc_derive"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"
repository = "https://github.com/AlexAegis/advent-of-code"

[lib]
name = "aoc_derive"
path = "./src/lib.rs"
proc-macro = true

[dependencies]

[dev-dependencies]
criterion = "*"
