[package]
name = "aoclib"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@pm.me>"]
license = "mit"
edition = "2021"
repository = "https://github.com/AlexAegis/advent-of-code"

[lib]
name = "aoclib"
path = "./src/lib.rs"

[dependencies]
cached = "0.51.3"
clap = "4.5.4"
async-std = "1.12.0"
tokio = "1.37.0"
rayon = "1.10.0"
regex = "1.10.4"
fancy-regex = "0.13.0"
num-traits = "0.2.19"

[dev-dependencies]
criterion = "*"
