[package]
name = "aoclib"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"
repository = "https://github.com/AlexAegis/advent-of-code"

[lib]
name = "aoclib"
path = "./src/lib.rs"

[dependencies]
cached = "0.11.0"
clap = "2.33.0"
async-std = "1.2.0"
tokio = "0.2.0-alpha.6"
rayon = "1.2.1"
regex = "1.3.1"
fancy-regex = "0.3.0"
num-traits = "0.2.10"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }

[dev-dependencies]
criterion = "0.3.0"
clippy = "0.0.302"


