[package]
name = "aoclib"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"
repository = "https://github.com/AlexAegis/advent-of-code"

[lib]
name = "aoclib"
path = "./src/lib.rs"

[dependencies]
cached = "0.20.0"
clap = "2.33.3"
async-std = "1.6.5"
tokio = "0.3.2"
rayon = "1.5.0"
regex = "1.4.1"
fancy-regex = "0.4.0"
num-traits = "0.2.12"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }

[dev-dependencies]
criterion = "*"
