[package]
name = "aoc201504"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[lib]
name = "aoc201504"
path = "./src/lib.rs"

[dependencies]
aoclib = { path = "../../lib" }
md5 = "0.7.0"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench"
harness = false
