[package]
name = "aoc201505"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[lib]
name = "aoc201505"
path = "./src/lib.rs"

[dependencies]
aoclib = { path = "../../lib" }
regex = "1.7.0"
fancy-regex = "0.10.0"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench"
harness = false
