[package]
name = "aoc201505"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2021"

[lib]
name = "aoc201505"
path = "./src/lib.rs"

[dependencies]
aoclib = { path = "../../lib" }
regex = "1.9.5"
fancy-regex = "0.11.0"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench"
harness = false
