[package]
name = "aoc201922"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2021"

[lib]
name = "aoc201922"
path = "./src/lib.rs"

[dependencies]
aoclib = { path = "../../lib" }

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench"
harness = false
