[package]
name = "aoc1502"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[lib]
name = "aoc1502"
path = "./src/lib.rs"

[dependencies]
aoc = { path = "../../../../" }
rayon = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench"
harness = false
