[package]
name = "aoc201502"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"

[lib]
name = "aoc201502"
path = "./src/lib.rs"

[dependencies]
aoclib = { path = "../../../lib/rust" }
rayon = "1.2.1"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "bench"
harness = false
